feat:升級至 laravel 11

--- a/lang/zh_TW.json
+++ b/lang/zh_TW.json
@@ -5,8 +5,12 @@
     "Full-Text Search": "全文檢索",
     "Index": "編號",
     "No data available.": "目前沒有資料。",
+    "of": "於",
     "Post Management": "貼文管理",
+    "results": "結果",
     "Search": "搜尋",
+    "Showing": "顯示中",
     "Title": "標題",
+    "to": "至",
     "Updated at": "更新時間"
 }
